# ChangeLog for x11-plugins/pidgin-opensteamworks
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-opensteamworks/ChangeLog,v 1.24 2014/01/14 16:56:37 mrueg Exp $

  14 Jan 2014; Manuel Rüger <mrueg@gentoo.org>
  -files/pidgin-opensteamworks-1.0_p32-Makefile,
  -files/pidgin-opensteamworks-1.0_p68-Makefile,
  -pidgin-opensteamworks-1.0_p41.ebuild, -pidgin-opensteamworks-1.0_p68.ebuild:
  Cleanup old.

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  pidgin-opensteamworks-1.3.ebuild:
  Stable for ppc, wrt bug #492308

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org>
  pidgin-opensteamworks-1.3.ebuild:
  Stable for x86, wrt bug #492308

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> pidgin-opensteamworks-1.3.ebuild:
  amd64 stable, bug #492308

*pidgin-opensteamworks-1.3 (05 Sep 2013)

  05 Sep 2013; Julian Ospald <hasufell@gentoo.org>
  +files/pidgin-opensteamworks-1.3-Makefile, +pidgin-opensteamworks-1.3.ebuild:
  version bump wrt #483664

*pidgin-opensteamworks-1.0_p68 (18 Aug 2013)

  18 Aug 2013; Julian Ospald <hasufell@gentoo.org>
  -pidgin-opensteamworks-1.0_p67.ebuild, +pidgin-opensteamworks-1.0_p68.ebuild,
  -files/pidgin-opensteamworks-1.0_p67-Makefile,
  +files/pidgin-opensteamworks-1.0_p68-Makefile:
  version bump, remove broken version

*pidgin-opensteamworks-1.0_p67 (10 Aug 2013)

  10 Aug 2013; Manuel Rüger <mrueg@gentoo.org>
  +files/pidgin-opensteamworks-1.0_p67-Makefile,
  +pidgin-opensteamworks-1.0_p67.ebuild, -pidgin-opensteamworks-1.0_p38.ebuild:
  Version bump. Drop old.

  08 Jul 2013; Manuel Rüger <mrueg@gentoo.org>
  -pidgin-opensteamworks-1.0_p32.ebuild, -pidgin-opensteamworks-1.0_p34.ebuild,
  -pidgin-opensteamworks-1.0_p36.ebuild, metadata.xml:
  Update metadata.xml, drop old

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org>
  pidgin-opensteamworks-1.0_p41.ebuild:
  Stable for amd64, wrt bug #474400

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org>