@@ -1,0 +1,12 @@
+DEFINED_PHASES=install prepare setup
+DEPEND=dev-libs/glib:2 dev-libs/json-glib dev-libs/nss gnome-base/libgnome-keyring net-im/pidgin app-arch/unzip virtual/pkgconfig
+DESCRIPTION=Steam protocol plugin for pidgin
+EAPI=5
+HOMEPAGE=http://code.google.com/p/pidgin-opensteamworks/
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-3
+RDEPEND=dev-libs/glib:2 dev-libs/json-glib dev-libs/nss gnome-base/libgnome-keyring net-im/pidgin
+SLOT=0
+SRC_URI=http://pidgin-opensteamworks.googlecode.com/files/steam-mobile-1.4.tar.bz2 http://pidgin-opensteamworks.googlecode.com/files/icons.zip -> pidgin-opensteamworks-icons.zip
+_eclasses_=multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=0f400927b2448d191cc3e8882afaec39
