@@ -1,6 +1,8 @@
 AUX pidgin-opensteamworks-1.3-Makefile 760 SHA256 d49ad1fc4b5dc4ef384ebc2233f65cff243be1592db962f33d2c82637cd9f8ae SHA512 fba48067f726ebb9bfd5dba8074b4314d5c15999cf6b4bfa57ddc2a64eb2fc0f5694d1164f7670b2e60de6492e403cb63915ccf3f6c91c380c1df570bbdd0901 WHIRLPOOL 46aeecc4c1071ab3c8e89d7fa95eb2ee1fce05b690222f3dcbe405e142499bb2632abdd182a9ac70bad1c853667facaa340f355ad477fffa7669a3b427765b7a
 DIST pidgin-opensteamworks-icons.zip 3252 SHA256 9af30f18b607fd16911c2e41b0fb594508583335804f25193da7846ea39f9fa9 SHA512 823f400bb4df9c6ddb65d8a01ec182fbbadeb955bc3e9590e88773b092b0cf79e50fc6c20d9b72def7fe9f8d6e1ac7cc087fbdb3f6ed4b76c343a29f18e6ea06 WHIRLPOOL 6b57fd61f15755b4c8f5090d7ab94974e1d8e5bd873fdc943ae762b3db97c0b65b295f8288747c98390fb1f52af27849840b084ca0e39bd88542f694decf0ff7
 DIST steam-mobile-1.3.tar.bz2 20870 SHA256 d145e99514538ea90f0dd3f6346c8de01e8983a10ebeccdff4611fed155047cd SHA512 32d570bc90677aac28a01db166d5fd44ade1951a45b3a55657984e93d8267f672c9cd228f054fac2acfef6cdbb2b1b98b12312a6d8d75321eb5da6c7806b3ac3 WHIRLPOOL e2889a0d6f1726ac795e2183f4e4b96b8f7ec94e293bd690e5ce9722ba072fa2b068836e463744e491e0cb66a7c4b0e612ee83b5e6dd31ca9152acf5e782a9b0
+DIST steam-mobile-1.4.tar.bz2 23293 SHA256 d7ac0396b17c7a45bdffaa4b1ccbc4b13118b64e9ea495fa5af629a8e29c8fab SHA512 20ac50ea49c1c0724aeb839fe46ac8a9b5a52d903ebf9bb18ab665fd32cdc4d80a426a0c2714724495ee73d758da2dbb891ac618b0689239485841fe6e6c0953 WHIRLPOOL 9f9e6ed0c1045e2fada9ea214b2be9560fc6d5937619cda403242c30ad8b1a4536fb6c0a92c311ca2998aed245d2fee5da9b48a6c8766e5c098688552bee6da7
 EBUILD pidgin-opensteamworks-1.3.ebuild 1125 SHA256 bf569832e20964f68c476f1a3f9ac2a0c0bf3aee748b240fc25059867f2b578c SHA512 320e51c2dd96e8726cf16014bcde24454cedfce82d8548981731f6f7dce4465d95b606284dd834ebcd3a515256b22579c146ec3b4b5c2455a9193827ceb71161 WHIRLPOOL d66e578ba81ed8093a3a310ec98d0e70c6e417a5e5a47d3e08ed3700558bd2579b986fd4d94c834a66001ccc225a457959e1d862ef5cf3dcceadfced1a4d7195
-MISC ChangeLog 4150 SHA256 6b56545dc8790634f96b4fc79d364ebb1679ed5abd9b55617cb3025044fb0179 SHA512 111aacf131174d01ad5ccded9cfa2663b4b8b01a6141977db13c274f22d1a43e116353f4af3184e36a330004800c62555b76be8abf108ccb58f4ce91156b95f9 WHIRLPOOL e82dc38bf5a6f6bc754982f5f76bb991ce034b0183db3c711761ae5b71a6cfa243fc4869a16fa6817b61c4604de8bd7cd7b6fd87bb8e8bd32a3e3e5119130bd4
+EBUILD pidgin-opensteamworks-1.4.ebuild 1135 SHA256 9b3c087fe9a750f555f9511bdb4943b69af54776619fd06e0f2bb97dbaa71844 SHA512 3f0ff1c18de97f89d134bf73a65e1e4d5c6dcda9d30a0a859f43fe387f2b57214726971b0d962c07b9c636f09e767a334886e45c96a5002eaaffc64326bb493a WHIRLPOOL 3b091f7e81083e72fb2b885f06625772646677c97f5c51bf93252828920e6ba6c27dbe7d0bea5d048c255308f15d0cf27251a7933e71be2d4d4976af6f4c940c
+MISC ChangeLog 4294 SHA256 e6939f98d822a781c32b99e7f1c83a0464c50f10435a52c29a3d52aa3c7c87a4 SHA512 e2598338b6c885345d93d73d190de7d7474515d049e9fbd113ea7263832e6a7606179add57150ffd95d2b25e3e4f7d7b0a4f1128d1f7d4eece3dcb52c5adcb41 WHIRLPOOL 78cc437909b7068116f75d2a1acacfdd9958bab62ca0b51201efd7f608bb99f0e040a0f44eed314249fea1c4d31d10d8586a74ee73cfa2be5b8d1ec1b6506dc2
 MISC metadata.xml 673 SHA256 d5839794313f116753231f64863179714031f30c4555aad35ebfd038e45315c6 SHA512 27daf90c8c79870badf66c8bb7b852c1371a3ffb887e14758e5be0c143de981e7fd2e4ca81c1f4b054d282ccf0a60c09a88677176a4b70fb441aeb10713c4670 WHIRLPOOL 1050e66155e0b6615277b86521403bd10e5d42861b074afbe81528d354de5c23fe2e5b3f405131aeb222cdb62b42894dd7b123970afed47d7b01e4dd56044616
