@@ -1,6 +1,12 @@
 # ChangeLog for x11-plugins/pidgin-opensteamworks
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-opensteamworks/ChangeLog,v 1.24 2014/01/14 16:56:37 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-opensteamworks/ChangeLog,v 1.25 2014/01/29 02:54:58 mrueg Exp $
+
+*pidgin-opensteamworks-1.4 (29 Jan 2014)
+
+  29 Jan 2014; Manuel Rüger <mrueg@gentoo.org>
+  +pidgin-opensteamworks-1.4.ebuild:
+  Version bump.
 
   14 Jan 2014; Manuel Rüger <mrueg@gentoo.org>
   -files/pidgin-opensteamworks-1.0_p32-Makefile,
